<resources>
    <string name="app_name">SmartButler</string>
    <string name="tab_ServerButler">服务管家</string>
    <string name="tab_Wechat">微信精选</string>
    <string name="tab_girl">美女社区</string>
    <string name="tab_User">个人中心</string>
    <string name="setting">设置</string>
    <string name="skip">跳过</string>
    <string name="enter">进入首页</string>
    <string name="UserName">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="smart">智能</string>
    <string name="powerful">强大</string>
    <string name="concise">简洁</string>
    <string name="age">年龄</string>
    <string name="jianjie">简介</string>
    <string name="checkPassword">验证密码</string>
    <string name="eMail">电子邮箱</string>
    <string name="enterUserName">请输入用户名!</string>
    <string name="enterAge">请输入年龄!</string>
    <string name="enterPassword">请输入密码!</string>
    <string name="enterRePassword">请输入验证密码!</string>
    <string name="checkPasswordAndRePassword">请确认密码和验证密码是否一致!</string>
    <string name="enterEmail">请输入电子邮箱!</string>
    <string name="noDesc">这家伙很懒，什么都没有留下!</string>
    <string name="regsigerWasSuccessful">注册成功！</string>
    <string name="error">错误</string>
    <string name="loginWasSuccessful">登录成功</string>
    <string name="changePassword">修改密码</string>
    <string name="odPassword">原始密码</string>
    <string name="findPassword">找回密码</string>
    <string name="enterOldPassword">请输入原始密码!</string>
    <string name="changeSuccessfully">修改成功</string>
    <string name="loging">正在登陆...</string>
    <string name="edit_info">编辑资料</string>
    <string name="name">姓名:</string>
    <string name="sex">性别:</string>
    <string name="desc">简介:</string>
    <string name="Confirm_change">确定修改</string>
    <string name="age2">年龄:</string>
    <string name="logistics_query">物流查询</string>
    <string name="attribution_query">归属地查询</string>
    <string name="logout">退出登录</string>
    <string name="cancel">取消</string>
    <string name="Photograph">拍照</string>
    <string name="gallery">图库</string>
    <string name="express_company">快递公司</string>
    <string name="express_number">快递单号</string>
    <string name="query">查询</string>
    <string name="pls_enter_message">请输入消息</string>
    <string name="send">发送</string>
    <string name="hello">你好!</string>
</resources>
